<resources>
    <string name="app_name">Universal Dictionary</string>
    <string name="app_name_favorite">Favorites</string>
    <string name="app_name_history">History</string>
    <string name="word_detail">Word details</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--common strings-->
    <string name="empty_result">No data!</string>
    <string name="no_internet">No internet!</string>
    <string name="connect">Connect</string>
    <string name="share_text">Install best shopping application from:</string>

    <!--Drawer menus title-->
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_history">History</string>
    <string name="menu_add_word">Add Word</string>
    <string name="menu_setting">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate">Rate App</string>

    <!--Others-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_word">AddWordActivity</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="title_activity_word_list">WordListActivity</string>
    <string name="title_activity_word_detail">WordDetailActivity</string>
    <string name="data_empty">Word Not Found</string>
    <string name="search_word">Search your word</string>

    <!--word detail String-->
    <string name="word">Word</string>
    <string name="word_type">/Word/</string>
    <string name="adjective">Adjective</string>
    <string name="synonym_text">Good, Excellent, Well, Proper, Good, Excellent, Well, Proper</string>
    <string name="antonym_text">Bad, Evil, Badness, Good, Excellent, Well, Proper</string>
    <string name="example_text">He is a very good person</string>
    <string name="example">Example:</string>
    <string name="synonym">Synonym:</string>
    <string name="antonym">Antonym:</string>

    <!--button String-->
    <string name="favorite">Favorite</string>
    <string name="speech">Speech</string>
    <string name="pronounce">Pronounce</string>
    <string name="word_all">All Word</string>

    <!--add word hints String-->
    <string name="type_word">Add word</string>
    <string name="type_word_meaning">Add meaning</string>
    <string name="type_synonym">Add synonym</string>
    <string name="type_antonym">Add antonym</string>
    <string name="select_word_type">Select word type</string>
    <string name="example_of_word">Add example</string>

    <string name="insert_word">save</string>
    <string name="about">Dictionary</string>

    <!-- Favorite activity -->
    <string name="favorite_list">Favorite List</string>

    <!-- Settings activity -->
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">Turn on/off notification</string>

    <!--- Addmob   !-->
    <string name="app_ad_id">ca-app-pub-6382099871444261~9778932425</string>
    <string name="banner_ad_unit_id">ca-app-pub-6382099871444261/7164732597</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6382099871444261/4249427662</string>
    <string name="history_list">History</string>
    <string name="add_word_list">Add new word</string>
    <string name="banner">BANNER</string>

</resources>
