<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_marginTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:padding="5dp"
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/textView_favourite"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/word"
                    android:textColor="@color/color_text"
                    android:layout_weight=".85"/>

                <ImageView
                    android:id="@+id/icon_voice_favorite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="7dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="27dp"
                    android:layout_toEndOf="@+id/textView_favourite"
                    android:src="@drawable/ic_voice_favorite" />

                <ImageView
                    android:id="@+id/icon_favorite_list_checked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_delete_black_24dp"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_another_word_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/word_type" />
                <TextView
                    android:id="@+id/textView_word_type_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/adjective"
                    />
            </LinearLayout>

        </LinearLayout>



</RelativeLayout>