<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mcc.dictionary.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@color/color_background" />

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_text"
            android:drawableRight="@drawable/ic_search_black_24dp"
            android:hint="@string/search_word"
            android:padding="8dp"
            android:shadowColor="@color/color_shadow"
            android:textColor="@color/color_text"
            android:textSize="15dp" />


        <LinearLayout
            android:id="@+id/textLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchBox"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/linear_Favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/favorite_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_favorite_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/favorite"
                    android:textColor="@color/color_white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_speech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/voice_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/voice_icon" />

                <TextView
                    android:id="@+id/voice_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/speech"
                    android:textColor="@color/color_white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_pronounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pronounce_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/pronounce_icon" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pronounce"
                    android:textColor="@color/color_white" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textLinear"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_text"
                app:cardCornerRadius="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/word_all"
                    android:textColor="@color/color_word"
                    android:textSize="12dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:paddingLeft="20dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycleView_word_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <com.turingtechnologies.materialscrollbar.DragScrollBar
                        android:id="@+id/dragScrollBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        app:msb_handleColour="@color/color_background"
                        app:msb_lightOnTouch="false"
                        app:msb_recyclerView="@id/recycleView_word_list" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/text_empty_test_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/data_empty"
                    android:textSize="30sp"
                    android:visibility="gone" />

                <include
                    layout="@layout/view_common_loader"
                    android:background="@color/color_white" />
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
